# LAT-Repo

./: 109_1_2_1.csv  README.md  hw1-2.ipynb  hw1.ipynb  pyproject.toml  中等教育階段畢業生升學率.csv  大學校院招生報考人數.csv  大學校院招生錄取人數.csv  教育部閩南語語言能力認證-各年齡層報名及通過人數.csv  臺北市市立各級學校每生享有教育經費.csv
.ipynb_checkpoints/: hw1-2-checkpoint.ipynb  hw1-checkpoint.ipynb  test-checkpoint.ipynb
TextSentimentBot/: .gitignore  index.js  package-lock.json  package.json  readme.md
TextSentimentBot/.azure/: config
TextSentimentBot/config/: default.json
hw3/: 1.txt  2.txt  3.txt  4.txt  TextMining.ipynb
hw3/.ipynb_checkpoints/: TextMining-checkpoint.ipynb
